Switched from react-select to material-ui, styled table using material-ui

--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,4 +1,4 @@
-.stats-table thead {
+/* .stats-table thead {
     background-color: #aaaaaa;
     color: #333;
     font-weight: bold;
@@ -21,7 +21,7 @@
     padding: 8px;
 } */
 
-.stats-table tbody tr:nth-child(odd) {
+/* .stats-table tbody tr:nth-child(odd) {
   background-color: #f0f0f0f0;
   /* color: #; */
-}
+} */ */
